fdo#64249: make sure we have matching start/end level for table in shapes

Change-Id: I4928f6a54e6cca9b26c0d2391fc1545688be2375